// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingDetailsForm component should display loader 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={null}
    fetchContact={[Function]}
    updateContact={[MockFunction]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Change billing address
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Change billing address
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <h3
            className="title"
          >
            Billing information
          </h3>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Loader
                    inline={false}
                    minHeight="500px"
                    size="40px"
                  >
                    <div
                      className="container"
                    >
                      <div
                        className="inner"
                        style={
                          Object {
                            "minHeight": "500px",
                          }
                        }
                      >
                        <i
                          className="icon-custom icon-circle-o-notch md-spin"
                          style={
                            Object {
                              "fontSize": "40px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </Loader>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;

exports[`BillingDetailsForm component should display not display the form 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={null}
    fetchContact={[Function]}
    updateContact={[MockFunction]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Change billing address
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Change billing address
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <h3
            className="title"
          >
            Billing information
          </h3>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <BillingAddressInputs
                        onChange={[Function]}
                        value={
                          Object {
                            "email": "",
                            "shipping": Object {
                              "address": Object {
                                "city": "",
                                "country": "",
                                "line1": "",
                                "line2": "",
                                "postal_code": "",
                                "state": "",
                              },
                              "name": "",
                              "phone": "",
                            },
                          }
                        }
                      >
                        <InputField
                          caption="Invoices are sent to this email address."
                          className="mb16"
                          isRequired={true}
                          label="Email"
                          name="email"
                          onChange={[Function]}
                          placeholder="your@email.com"
                          type="email"
                          value=""
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="input-text-15"
                              isDisabled={false}
                              isRequired={true}
                            >
                              <label
                                className="label label"
                                htmlFor="input-text-15"
                              >
                                Email
                                <abbr
                                  aria-label="required"
                                  className="abbr"
                                  title="required"
                                >
                                  *
                                </abbr>
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              aria-describedby="input-text-15-caption"
                              hasError={false}
                              id="input-text-15"
                              isDisabled={false}
                              isRequired={true}
                              name="email"
                              onChange={[Function]}
                              placeholder="your@email.com"
                              type="email"
                              value=""
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  aria-describedby="input-text-15-caption"
                                  className="input"
                                  disabled={false}
                                  id="input-text-15"
                                  name="email"
                                  onChange={[Function]}
                                  placeholder="your@email.com"
                                  required={true}
                                  type="email"
                                  value=""
                                />
                              </div>
                            </ForwardRef(TextInput)>
                            <Caption
                              id="input-text-15-caption"
                            >
                              <div
                                className="caption"
                                id="input-text-15-caption"
                              >
                                Invoices are sent to this email address.
                              </div>
                            </Caption>
                          </div>
                        </InputField>
                        <div
                          className="row mb16"
                        >
                          <InputField
                            className="inputRow"
                            id="name"
                            label="Company name"
                            onChange={[Function]}
                            placeholder="e.g. Gorgias"
                            value=""
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="name"
                                isDisabled={false}
                                isRequired={false}
                              >
                                <label
                                  className="label label"
                                  htmlFor="name"
                                >
                                  Company name
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="name"
                                isDisabled={false}
                                isRequired={false}
                                onChange={[Function]}
                                placeholder="e.g. Gorgias"
                                value=""
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="name"
                                    name="name"
                                    onChange={[Function]}
                                    placeholder="e.g. Gorgias"
                                    required={false}
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                          <InputField
                            className="inputRow"
                            id="phone"
                            label="Phone number"
                            onChange={[Function]}
                            placeholder="415 859 3010"
                            type="tel"
                            value=""
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="phone"
                                isDisabled={false}
                                isRequired={false}
                              >
                                <label
                                  className="label label"
                                  htmlFor="phone"
                                >
                                  Phone number
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="phone"
                                isDisabled={false}
                                isRequired={false}
                                onChange={[Function]}
                                placeholder="415 859 3010"
                                type="tel"
                                value=""
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="phone"
                                    name="phone"
                                    onChange={[Function]}
                                    placeholder="415 859 3010"
                                    required={false}
                                    type="tel"
                                    value=""
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                        <InputField
                          className="mb16"
                          isRequired={true}
                          label="Street address"
                          name="line1"
                          onChange={[Function]}
                          placeholder="Gorgias Street"
                          type="text"
                          value=""
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="input-text-21"
                              isDisabled={false}
                              isRequired={true}
                            >
                              <label
                                className="label label"
                                htmlFor="input-text-21"
                              >
                                Street address
                                <abbr
                                  aria-label="required"
                                  className="abbr"
                                  title="required"
                                >
                                  *
                                </abbr>
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              hasError={false}
                              id="input-text-21"
                              isDisabled={false}
                              isRequired={true}
                              name="line1"
                              onChange={[Function]}
                              placeholder="Gorgias Street"
                              type="text"
                              value=""
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  className="input"
                                  disabled={false}
                                  id="input-text-21"
                                  name="line1"
                                  onChange={[Function]}
                                  placeholder="Gorgias Street"
                                  required={true}
                                  type="text"
                                  value=""
                                />
                              </div>
                            </ForwardRef(TextInput)>
                          </div>
                        </InputField>
                        <InputField
                          className="mb16"
                          id="line2"
                          label="Suite/Unit"
                          onChange={[Function]}
                          placeholder="e.g. Unit #2, Floor 5"
                          value=""
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="line2"
                              isDisabled={false}
                              isRequired={false}
                            >
                              <label
                                className="label label"
                                htmlFor="line2"
                              >
                                Suite/Unit
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              hasError={false}
                              id="line2"
                              isDisabled={false}
                              isRequired={false}
                              onChange={[Function]}
                              placeholder="e.g. Unit #2, Floor 5"
                              value=""
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  className="input"
                                  disabled={false}
                                  id="line2"
                                  name="line2"
                                  onChange={[Function]}
                                  placeholder="e.g. Unit #2, Floor 5"
                                  required={false}
                                  type="text"
                                  value=""
                                />
                              </div>
                            </ForwardRef(TextInput)>
                          </div>
                        </InputField>
                        <div
                          className="row mb16"
                        >
                          <InputField
                            className="inputRow"
                            label="Country"
                            name="country"
                            onChange={[Function]}
                            required={true}
                            type="select"
                            value=""
                          >
                            <FormGroup
                              className="InputField inputRow required"
                              color=""
                              tag="div"
                            >
                              <div
                                className="InputField inputRow required form-group"
                                color=""
                              >
                                <Label
                                  className="control-label"
                                  htmlFor="id-country"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="control-label"
                                    htmlFor="id-country"
                                  >
                                    Country
                                  </label>
                                </Label>
                                <div
                                  className="select dropdown-toggle"
                                >
                                  <Input
                                    className="field"
                                    id="id-country"
                                    onChange={[Function]}
                                    required={true}
                                    type="select"
                                    value=""
                                  >
                                    <select
                                      className="field form-control"
                                      id="id-country"
                                      onChange={[Function]}
                                      required={true}
                                      value=""
                                    >
                                      <option
                                        value=""
                                      >
                                        -
                                      </option>
                                      <option
                                        key="FR"
                                        value="FR"
                                      >
                                        France
                                      </option>
                                      <option
                                        key="US"
                                        value="US"
                                      >
                                        United States
                                      </option>
                                    </select>
                                  </Input>
                                </div>
                              </div>
                            </FormGroup>
                          </InputField>
                          <InputField
                            className="inputRow"
                            id="postalCode"
                            isRequired={true}
                            label="Zip code"
                            onChange={[Function]}
                            placeholder="94103"
                            value=""
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="postalCode"
                                isDisabled={false}
                                isRequired={true}
                              >
                                <label
                                  className="label label"
                                  htmlFor="postalCode"
                                >
                                  Zip code
                                  <abbr
                                    aria-label="required"
                                    className="abbr"
                                    title="required"
                                  >
                                    *
                                  </abbr>
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="postalCode"
                                isDisabled={false}
                                isRequired={true}
                                onChange={[Function]}
                                placeholder="94103"
                                value=""
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="postalCode"
                                    name="postalCode"
                                    onChange={[Function]}
                                    placeholder="94103"
                                    required={true}
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                        <div
                          className="row mb32"
                        >
                          <InputField
                            className="inputRow"
                            id="city"
                            isRequired={true}
                            label="City"
                            onChange={[Function]}
                            placeholder="New York"
                            value=""
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="city"
                                isDisabled={false}
                                isRequired={true}
                              >
                                <label
                                  className="label label"
                                  htmlFor="city"
                                >
                                  City
                                  <abbr
                                    aria-label="required"
                                    className="abbr"
                                    title="required"
                                  >
                                    *
                                  </abbr>
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="city"
                                isDisabled={false}
                                isRequired={true}
                                onChange={[Function]}
                                placeholder="New York"
                                value=""
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="city"
                                    name="city"
                                    onChange={[Function]}
                                    placeholder="New York"
                                    required={true}
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                      </BillingAddressInputs>
                      <div>
                        <ForwardRef
                          className="submitButton"
                          isLoading={false}
                          type="submit"
                        >
                          <BaseButton
                            className="submitButton"
                            isDisabled={false}
                            isLoading={false}
                          >
                            <button
                              className="wrapper submitButton fill primary medium"
                              disabled={false}
                              type="submit"
                            >
                              Update Address
                            </button>
                          </BaseButton>
                        </ForwardRef>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;

exports[`BillingDetailsForm component should display the form with billing contact information 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <BillingDetailsFormContainer
    contact={
      Immutable.Map {
        "email": "hello@acme.gorgias.io",
        "shipping": Immutable.Map {
          "name": "Gorgias",
          "phone": "4155555556",
          "address": Immutable.Map {
            "line1": "52 Washburn St",
            "line2": "",
            "city": "San Francisco",
            "state": "CA",
            "country": "United States",
            "postal_code": "94103",
          },
        },
      }
    }
    fetchContact={[Function]}
    updateContact={[MockFunction]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                className="section"
                to="/app/settings/billing/"
              >
                Billing & Usage
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              Change billing address
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="page-header pageHeader"
        >
          <Breadcrumb
            aria-label="breadcrumb"
            listTag="ol"
            tag="nav"
          >
            <nav
              aria-label="breadcrumb"
              className=""
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      className="section"
                      to="/app/settings/billing/"
                    >
                      <a
                        className="section"
                        to="/app/settings/billing/"
                      >
                        Billing & Usage
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    Change billing address
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </div>
      </PageHeader>
      <Container
        className="pageContainer"
        fluid={true}
        tag="div"
      >
        <div
          className="pageContainer container-fluid"
        >
          <h3
            className="title"
          >
            Billing information
          </h3>
          <Row
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="row"
            >
              <Col
                lg={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-lg-6"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <BillingAddressInputs
                        onChange={[Function]}
                        value={
                          Object {
                            "email": "hello@acme.gorgias.io",
                            "shipping": Object {
                              "address": Object {
                                "city": "San Francisco",
                                "country": "United States",
                                "line1": "52 Washburn St",
                                "line2": "",
                                "postal_code": "94103",
                                "state": "CA",
                              },
                              "name": "Gorgias",
                              "phone": "4155555556",
                            },
                          }
                        }
                      >
                        <InputField
                          caption="Invoices are sent to this email address."
                          className="mb16"
                          isRequired={true}
                          label="Email"
                          name="email"
                          onChange={[Function]}
                          placeholder="your@email.com"
                          type="email"
                          value="hello@acme.gorgias.io"
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="input-text-29"
                              isDisabled={false}
                              isRequired={true}
                            >
                              <label
                                className="label label"
                                htmlFor="input-text-29"
                              >
                                Email
                                <abbr
                                  aria-label="required"
                                  className="abbr"
                                  title="required"
                                >
                                  *
                                </abbr>
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              aria-describedby="input-text-29-caption"
                              hasError={false}
                              id="input-text-29"
                              isDisabled={false}
                              isRequired={true}
                              name="email"
                              onChange={[Function]}
                              placeholder="your@email.com"
                              type="email"
                              value="hello@acme.gorgias.io"
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  aria-describedby="input-text-29-caption"
                                  className="input"
                                  disabled={false}
                                  id="input-text-29"
                                  name="email"
                                  onChange={[Function]}
                                  placeholder="your@email.com"
                                  required={true}
                                  type="email"
                                  value="hello@acme.gorgias.io"
                                />
                              </div>
                            </ForwardRef(TextInput)>
                            <Caption
                              id="input-text-29-caption"
                            >
                              <div
                                className="caption"
                                id="input-text-29-caption"
                              >
                                Invoices are sent to this email address.
                              </div>
                            </Caption>
                          </div>
                        </InputField>
                        <div
                          className="row mb16"
                        >
                          <InputField
                            className="inputRow"
                            id="name"
                            label="Company name"
                            onChange={[Function]}
                            placeholder="e.g. Gorgias"
                            value="Gorgias"
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="name"
                                isDisabled={false}
                                isRequired={false}
                              >
                                <label
                                  className="label label"
                                  htmlFor="name"
                                >
                                  Company name
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="name"
                                isDisabled={false}
                                isRequired={false}
                                onChange={[Function]}
                                placeholder="e.g. Gorgias"
                                value="Gorgias"
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="name"
                                    name="name"
                                    onChange={[Function]}
                                    placeholder="e.g. Gorgias"
                                    required={false}
                                    type="text"
                                    value="Gorgias"
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                          <InputField
                            className="inputRow"
                            id="phone"
                            label="Phone number"
                            onChange={[Function]}
                            placeholder="415 859 3010"
                            type="tel"
                            value="4155555556"
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="phone"
                                isDisabled={false}
                                isRequired={false}
                              >
                                <label
                                  className="label label"
                                  htmlFor="phone"
                                >
                                  Phone number
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="phone"
                                isDisabled={false}
                                isRequired={false}
                                onChange={[Function]}
                                placeholder="415 859 3010"
                                type="tel"
                                value="4155555556"
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="phone"
                                    name="phone"
                                    onChange={[Function]}
                                    placeholder="415 859 3010"
                                    required={false}
                                    type="tel"
                                    value="4155555556"
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                        <InputField
                          className="mb16"
                          isRequired={true}
                          label="Street address"
                          name="line1"
                          onChange={[Function]}
                          placeholder="Gorgias Street"
                          type="text"
                          value="52 Washburn St"
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="input-text-35"
                              isDisabled={false}
                              isRequired={true}
                            >
                              <label
                                className="label label"
                                htmlFor="input-text-35"
                              >
                                Street address
                                <abbr
                                  aria-label="required"
                                  className="abbr"
                                  title="required"
                                >
                                  *
                                </abbr>
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              hasError={false}
                              id="input-text-35"
                              isDisabled={false}
                              isRequired={true}
                              name="line1"
                              onChange={[Function]}
                              placeholder="Gorgias Street"
                              type="text"
                              value="52 Washburn St"
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  className="input"
                                  disabled={false}
                                  id="input-text-35"
                                  name="line1"
                                  onChange={[Function]}
                                  placeholder="Gorgias Street"
                                  required={true}
                                  type="text"
                                  value="52 Washburn St"
                                />
                              </div>
                            </ForwardRef(TextInput)>
                          </div>
                        </InputField>
                        <InputField
                          className="mb16"
                          id="line2"
                          label="Suite/Unit"
                          onChange={[Function]}
                          placeholder="e.g. Unit #2, Floor 5"
                          value=""
                        >
                          <div
                            className="mb16"
                          >
                            <Label
                              className="label"
                              htmlFor="line2"
                              isDisabled={false}
                              isRequired={false}
                            >
                              <label
                                className="label label"
                                htmlFor="line2"
                              >
                                Suite/Unit
                              </label>
                            </Label>
                            <ForwardRef(TextInput)
                              hasError={false}
                              id="line2"
                              isDisabled={false}
                              isRequired={false}
                              onChange={[Function]}
                              placeholder="e.g. Unit #2, Floor 5"
                              value=""
                            >
                              <div
                                className="wrapper"
                              >
                                <input
                                  className="input"
                                  disabled={false}
                                  id="line2"
                                  name="line2"
                                  onChange={[Function]}
                                  placeholder="e.g. Unit #2, Floor 5"
                                  required={false}
                                  type="text"
                                  value=""
                                />
                              </div>
                            </ForwardRef(TextInput)>
                          </div>
                        </InputField>
                        <div
                          className="row mb16"
                        >
                          <InputField
                            className="inputRow"
                            label="Country"
                            name="country"
                            onChange={[Function]}
                            required={true}
                            type="select"
                            value="United States"
                          >
                            <FormGroup
                              className="InputField inputRow required"
                              color=""
                              tag="div"
                            >
                              <div
                                className="InputField inputRow required form-group"
                                color=""
                              >
                                <Label
                                  className="control-label"
                                  htmlFor="id-country"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="control-label"
                                    htmlFor="id-country"
                                  >
                                    Country
                                  </label>
                                </Label>
                                <div
                                  className="select dropdown-toggle"
                                >
                                  <Input
                                    className="field"
                                    id="id-country"
                                    onChange={[Function]}
                                    required={true}
                                    type="select"
                                    value="United States"
                                  >
                                    <select
                                      className="field form-control"
                                      id="id-country"
                                      onChange={[Function]}
                                      required={true}
                                      value="United States"
                                    >
                                      <option
                                        value=""
                                      >
                                        -
                                      </option>
                                      <option
                                        key="FR"
                                        value="FR"
                                      >
                                        France
                                      </option>
                                      <option
                                        key="US"
                                        value="US"
                                      >
                                        United States
                                      </option>
                                    </select>
                                  </Input>
                                </div>
                              </div>
                            </FormGroup>
                          </InputField>
                          <InputField
                            className="inputRow"
                            id="postalCode"
                            isRequired={true}
                            label="Zip code"
                            onChange={[Function]}
                            placeholder="94103"
                            value="94103"
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="postalCode"
                                isDisabled={false}
                                isRequired={true}
                              >
                                <label
                                  className="label label"
                                  htmlFor="postalCode"
                                >
                                  Zip code
                                  <abbr
                                    aria-label="required"
                                    className="abbr"
                                    title="required"
                                  >
                                    *
                                  </abbr>
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="postalCode"
                                isDisabled={false}
                                isRequired={true}
                                onChange={[Function]}
                                placeholder="94103"
                                value="94103"
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="postalCode"
                                    name="postalCode"
                                    onChange={[Function]}
                                    placeholder="94103"
                                    required={true}
                                    type="text"
                                    value="94103"
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                        <div
                          className="row mb32"
                        >
                          <InputField
                            className="inputRow"
                            id="city"
                            isRequired={true}
                            label="City"
                            onChange={[Function]}
                            placeholder="New York"
                            value="San Francisco"
                          >
                            <div
                              className="inputRow"
                            >
                              <Label
                                className="label"
                                htmlFor="city"
                                isDisabled={false}
                                isRequired={true}
                              >
                                <label
                                  className="label label"
                                  htmlFor="city"
                                >
                                  City
                                  <abbr
                                    aria-label="required"
                                    className="abbr"
                                    title="required"
                                  >
                                    *
                                  </abbr>
                                </label>
                              </Label>
                              <ForwardRef(TextInput)
                                hasError={false}
                                id="city"
                                isDisabled={false}
                                isRequired={true}
                                onChange={[Function]}
                                placeholder="New York"
                                value="San Francisco"
                              >
                                <div
                                  className="wrapper"
                                >
                                  <input
                                    className="input"
                                    disabled={false}
                                    id="city"
                                    name="city"
                                    onChange={[Function]}
                                    placeholder="New York"
                                    required={true}
                                    type="text"
                                    value="San Francisco"
                                  />
                                </div>
                              </ForwardRef(TextInput)>
                            </div>
                          </InputField>
                        </div>
                      </BillingAddressInputs>
                      <div>
                        <ForwardRef
                          className="submitButton"
                          isLoading={false}
                          type="submit"
                        >
                          <BaseButton
                            className="submitButton"
                            isDisabled={false}
                            isLoading={false}
                          >
                            <button
                              className="wrapper submitButton fill primary medium"
                              disabled={false}
                              type="submit"
                            >
                              Update Address
                            </button>
                          </BaseButton>
                        </ForwardRef>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </BillingDetailsFormContainer>
</Provider>
`;
